--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+body {
     font-family: Roboto, HelveticaNeue, Arial, sans-serif !important;
     font-size: 14px;
     color: #222;
@@ -9,7 +9,7 @@
     display: block;
     margin: 0 auto;
     clear: both;
-    padding-top: 250px;
+    padding-top: 198px;
 }
 
 
@@ -31,6 +31,7 @@ input {
     padding-left: 50px;
     outline: 0;
     font-size: 16px;
+    font-family: inherit;
 }
 
 input:focus{
@@ -63,6 +64,8 @@ button {
     text-align: center;
     cursor: pointer;
     user-select: none;
+    font-family: inherit;
+    font-size:inherit;
 }
 
 button:hover {
@@ -70,5 +73,75 @@ button:hover {
     background-color: #f8f9fa;
     border: 1px solid #dadce0;
     color: #202124;
+}
+
+header {
+    line-height: 24px;
+    font-size: 13px;
+}
+
+ul {
+    margin:0;
+    padding:0;
+    list-style-type: none;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+li a {
+    display: block;
+    color:inherit;
+    text-decoration: none;
+    padding: 10px 7px;
+    text-align: center;
+}
+
+svg {
+    color: #5f6368;
+    opacity: 0.6;
+    padding-left: 4px;
+}
+
+svg:hover {
+    background-color: rgba(60,64,67,0.08);
+    background-clip:border-box;
+    outline: none;
+    border-radius: 50%;
+}
+
+.connect {
+    color: white !important;
+    letter-spacing: .25px;
+    line-height: 16px;
+    font-size: 14px;
+    vertical-align: middle;
+    margin-left: 8px;
+    margin-top: 5px;
+    outline:none;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-right: 10px;
+    padding: 9px 23px;
+    background: #1a73e8;
+    border: 1px solid transparent;
+    text-decoration: none !important;
+}
+
+.connect:hover {
+    background: #2b7de9;
+    box-shadow: 0 1px 2px 0 rgba(66,133,244,0.3),0 1px 3px 1px rgba(66,133,244,0.15);
+}
+
+li a:hover {
+    text-decoration: underline;
+}
+
+a:visited {
+    color: inherit;
+}
+
+li {
+    float: right;
+    white-space: nowrap;
 }
 
