--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0;
+    height: 100%;
     font-family: Roboto, HelveticaNeue, Arial, sans-serif !important;
     font-size: 14px;
     color: #222;
@@ -80,7 +82,7 @@ header {
     font-size: 13px;
 }
 
-ul {
+header ul {
     margin:0;
     padding:0;
     list-style-type: none;
@@ -88,7 +90,7 @@ ul {
     text-decoration: none;
 }
 
-li a {
+header li a {
     display: block;
     color:inherit;
     text-decoration: none;
@@ -136,12 +138,63 @@ li a:hover {
     text-decoration: underline;
 }
 
-a:visited {
+li a:visited {
     color: inherit;
 }
 
-li {
+header li {
     float: right;
     white-space: nowrap;
 }
 
+footer {
+    background: #f2f2f2;
+    margin-top: 315px;
+    height: 92px;
+}
+
+.country {
+    padding: 15px 30px;
+    border-bottom: 1px solid #dadce0;
+    font-size: 15px;
+    color: rgba(0,0,0,.54)
+}
+
+.info {
+    display: block;
+    margin-left: -37px;
+    color: rgba(0,0,0,.54);
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0;
+}
+
+footer ul {
+    overflow: hidden;
+    list-style-type: none;
+}
+
+footer li {
+    float: left;
+    white-space: nowrap;
+    padding-left: 30px;
+}
+
+.carbon {
+    margin-top: 7px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.right {
+    margin-left: 750px;
+}
+
+footer li a {
+    text-decoration: none;
+    color: rgba(0,0,0,.54);
+    display: block;
+    white-space: nowrap;
+}
